@@ -1,6 +1,9 @@
 # ChangeLog for dev-util/dejagnu
-# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/dejagnu/ChangeLog,v 1.14 2007/02/22 01:59:49 peper Exp $
+# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-util/dejagnu/ChangeLog,v 1.15 2008/06/03 07:54:50 aballier Exp $
+
+  03 Jun 2008; Alexis Ballier <aballier@gentoo.org> dejagnu-1.4.4-r1.ebuild:
+  keyword ~sparc-fbsd
 
   22 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> ChangeLog:
   Transition to Manifest2.
